[gd_scene load_steps=3 format=3 uid="uid://kt1te4rsdjmk"]

[ext_resource type="Script" uid="uid://bf7i68fykns4x" path="res://ui.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://c78pykn3mt8jq" path="res://lvl.gd" id="2_0xm2m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="shield" type="Button" parent="."]
layout_mode = 0
offset_left = 212.0
offset_top = 116.0
offset_right = 267.0
offset_bottom = 147.0
text = "shield"

[node name="sword" type="Button" parent="."]
layout_mode = 0
offset_left = 829.0
offset_top = 119.0
offset_right = 885.0
offset_bottom = 150.0
text = "sword"

[node name="magic" type="Button" parent="."]
layout_mode = 0
offset_left = 849.0
offset_top = 464.0
offset_right = 903.0
offset_bottom = 495.0
text = "magic"

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = 485.0
offset_top = 245.0
offset_right = 655.0
offset_bottom = 362.0
text = "PLAY"

[node name="bow" type="Button" parent="."]
layout_mode = 0
offset_left = 217.0
offset_top = 455.0
offset_right = 271.0
offset_bottom = 486.0
text = "bow"

[node name="quit" type="Button" parent="."]
visible = false
top_level = true
layout_mode = 0
offset_left = 1081.0
offset_top = 22.0
offset_right = 1120.0
offset_bottom = 53.0
text = "quit"

[node name="lvl" type="Label" parent="."]
layout_mode = 0
offset_left = 528.0
offset_top = 14.0
offset_right = 629.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
script = ExtResource("2_0xm2m")

[connection signal="button_down" from="shield" to="." method="_on_shield_button_down"]
[connection signal="button_down" from="sword" to="." method="_on_sword_button_down"]
[connection signal="button_down" from="magic" to="." method="_on_magic_button_down"]
[connection signal="button_down" from="play" to="." method="_on_play_button_down"]
[connection signal="button_down" from="bow" to="." method="_on_bow_button_down"]
[connection signal="button_down" from="quit" to="." method="_on_quit_button_down"]
